Changed to a more efficient construction method for numerics.  FindBugs.